More Electron and Steam integration

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Powered by GLOV.js</title>
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no,shrink-to-fit=no,maximum-scale=1.0,minimum-scale=1.0,viewport-fit=cover,interactive-widget=resizes-content">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' blob: data:; connect-src *"> <!-- for Electron, doesn't really help though -->
     <meta name="Description" content="Description goes here" />
     <meta charset="utf-8"/>
     <meta property="og:title" content="Powered by GLOV.js">
